--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.generate-unique-name = false
 
 spring.profiles.include=oauth
+
+spring.session.store-type=jdbc
